--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-background:no-repeat center url(./../../../images/cover-trains.jpg);
+background:no-repeat center url(./../../images/cover-trains.jpg);
 background-size: cover;
 width: 100%;
 height: 100%;
